--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -43,11 +43,50 @@
                             </li>
                             <li><a href="/getting-started/controllers">Controllers</a></li>
                             <li><a href="/getting-started/models">Models</a></li>
-                            <li><a href="/getting-started/services">Services</a></li>
-                            <li><a href="/getting-started/events">Events</a></li>
-                            <li><a href="/getting-started/modules">Modules</a></li>
-                            <li><a href="/getting-started/popcorn">Popcorn</a></li>
-                            <li><a href="/getting-started/kettle">Kettle</a></li>
+                            <li>
+                                <a href="/getting-started/services">Services</a>
+                                <ul class="hidden">
+                                    <li><a href="/getting-started/services#syntax">Syntax</a></li>
+                                    <li><a href="/getting-started/services#parameters">Parameters</a></li>
+                                    <li><a href="/getting-started/services#container">Service Container</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/getting-started/events">Events</a>
+                                <ul class="hidden">
+                                    <li><a href="/getting-started/events#priority">Priority</a></li>
+                                    <li><a href="/getting-started/events#application">Application Events</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/getting-started/modules">Modules</a>
+                                <ul class="hidden">
+                                    <li><a href="/getting-started/modules#custom">Custom Modules</a></li>
+                                    <li><a href="/getting-started/modules#manager">Module Manager</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/getting-started/popcorn">Popcorn</a>
+                                <ul class="hidden">
+                                    <li><a href="/getting-started/popcorn#basic">Basic Use</a></li>
+                                    <li><a href="/getting-started/popcorn#advanced">Advanced Use</a></li>
+                                    <li><a href="/getting-started/popcorn#routes">Routes</a></li>
+                                    <li><a href="/getting-started/popcorn#custom">Custom Methods</a></li>
+                                    <li><a href="/getting-started/popcorn#api">API</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/getting-started/kettle">Kettle</a>
+                                <ul class="hidden">
+                                    <li><a href="/getting-started/kettle#init">Initializing an Application</a></li>
+                                    <li><a href="/getting-started/kettle#include">Kettle Include</a></li>
+                                    <li><a href="/getting-started/kettle#databases">Managing Databases</a></li>
+                                    <li><a href="/getting-started/kettle#creating">Creating App Files</a></li>
+                                    <li><a href="/getting-started/kettle#web-server">Web Server</a></li>
+                                    <li><a href="/getting-started/kettle#accessing">Accessing the App</a></li>
+                                    <li><a href="/getting-started/kettle#windows">Windows</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li x-data="{open: <?=$nav4Active; ?>}">
